tests/machine/x/java/group_by_multi_join_sort.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort1036556409/001/GroupByMultiJoinSort.java:117: error: bad operand types for binary operator '&&'
					if (!(Objects.equals(String.valueOf(String.valueOf(o.o_orderdate).compareTo(String.valueOf(start_date)) >= 0 && o.o_orderdate).compareTo(String.valueOf(end_date)) < 0 && l.l_returnflag, "R"))) continue;
					                                                                                                             ^
  first type:  boolean
  second type: String
1 error


  1| let nation = [
  2|   { n_nationkey: 1, n_name: "BRAZIL" }